--- a/Geoprocessing/GPToolInspector/GPToolInspector.csproj
+++ b/Geoprocessing/GPToolInspector/GPToolInspector.csproj
@@ -36,6 +36,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="pythonnet" Version="3.0.5" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="ArcGIS.Desktop.Framework">
